--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.3.0",
     "@mui/material-nextjs": "^6.3.0",
     "dompurify": "^3.2.3",
