--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.3.0",
     "@mui/material-nextjs": "^6.3.0",
     "dompurify": "^3.2.3",
+    "framer-motion": "^12.0.6",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
